Updates docs with more explanation
Signed-off-by: maximillianbrain1 <maximillian@rad.security>

--- a/templates/guides/using_plugin_keys_with_irsa_and_secrets_manager.md.tmpl
+++ b/templates/guides/using_plugin_keys_with_irsa_and_secrets_manager.md.tmpl
@@ -2,14 +2,24 @@
 page_title: "Using Plugin Keys With IRSA and AWS Secrets Manager"
 subcategory: "Guides"
 description: |-
-  Configuring plugin keys
+  How to use plugin keys stored in AWS Secrets Manager and access themwith IRSA
 ---
 
 # Using Plugin Keys With IRSA and AWS Secrets Manager
 
 You can use the `rad-security_cluster_api_key` resource to create plugin keys for your cluster. The resource outputs can be used within an AWS Secrets Manager secret. You can pass the secret to the Rad Security Helm Chart to use plugin keys by referencing the AWS Secret Manager secret ARN in the helm chart. 
 
-To avoid passing access and secret IAM keys in the helm chart, you can IRSA instead. This example shows how to configure IRSA for an EKS cluster with the minimum required IAM permissions. Depending on how your terraform code is structured, you will need to adjust the IAM policy or IRSA oidc providers as needed. 
+The AWS Secrets Manager secret has to be in the following format:
+
+```json
+{
+  "access-key-id": "YOUR_ACCESS_KEY_ID",
+  "secret-access-key": "YOUR_SECRET_ACCESS_KEY"
+}
+```
+
+
+To avoid passing access and secret IAM keys in the helm chart, you can IRSA instead. This example shows how to configure IRSA for an EKS cluster with the minimum required IAM permissions. Depending on how your terraform code is structured, you will need to adjust the IAM policy or IRSA OIDC providers as needed. 
 
 {{tffile "examples/cluster_api_key_with_aws_secrets_manager.tf"}}
 
@@ -35,3 +45,5 @@ k9:
     serviceAccountAnnotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/rad-plugins-irsa-role
 ```
+
+These values set the service account annotations for IRSA. The Rad Plugins will use the default configuration chain to retrieve the necessary AWS credentials to authenticate with AWS and use those credentials to pull the plugin keys from AWS Secrets Manager. 
